2009-02-06  Bernhard Walle <bwalle@suse.de>

	* Improve error message in Debuglink::openCompressed().

2009-01-26  Bernhard Walle <bwalle@suse.de>

	* Fix missing error reason (string representation  of errno) in the
	  exception output.
	* Include the position of the input stream in the exception output.

2009-01-23  Bernhard Walle <bwalle@suse.de>

	* Fix invalid syntax in CMakeLists.txt.
	* Fix manpage, the command is called read_ikconfig and not
	  print_ikconfig.
	* Remove the documentation about the non-working network configuration
	  in Xen since that has been fixed meanwhile.
	* Make it possible to exit the shell spawned in the initrd with 'exit'
	  to boot in the kdump system for debugging.

2009-01-14  Bernhard Walle <bwalle@suse.de>

	* Call a2x with the -L option (prevent syntax checking of docbook
	  output) to generate the manual pages with asciidoc 8.3.x.

2008-12-03  Bernhard Walle <bwalle@suse.de>

	* Call 'mkinitrd' with the -B (don't update bootloader) option
	  in mkdumprd(8).

2008-11-24  Bernhard Walle <bwalle@suse.de>

	* Document kdump problems on Xen.
	* Don't display the full mkinitrd output.
	* Warn about zero-size vmcore.
	* Default to the auto-detected kernel when mkdumprd is called without
	  arguments instead of defaulting to the running kernel.
	* Parse VMCOREINFO_XEN when present with 'read_vmcoreinfo'.
	* Pass the kernel release of the crashed kernel via command line in
	  case of Xen.
	* Improve error handling when no crash kernel release is available
	  when saving the dump.

2008-11-21  Bernhard Walle <bwalle@suse.de>

	* Don't use the FQDN but only the hostname to avoid DNS lookups
	  and errors on wrongly configured systems.
	* Fix empty KDUMP_SAVEDIR line when replacing the symbolic link with the
	  absolute path.
	* Don't set sysctl kernel.unknown_nmi_panic=1 by default.
	* Mention kernel.panic_on_unrecovered_nmi (yes, that's a different
	  sysctl) in the kdump(7) manpage.

2008-11-20  Bernhard Walle <bwalle@suse.de>
